# NoiseMachine-IRLoader

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Convolver/: CMakeLists.txt  Convolver.cpp
src/Convolver/include/: Convolver.h  ConvolverIf.h
src/Exec/: CMakeLists.txt  main.cpp
src/Plugin/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp
src/Plugin/include/: PluginEditor.h  PluginProcessor.h
test/: CMakeLists.txt  CatchUtil.cpp  testConvolver.cpp  testRingBuffer.cpp
